# Zileo-Chat

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  FRONTEND_STATE_MANAGEMENT_ANALYSIS.md  LICENSE  NOTICE  README.md  README_PHASE0.md  SECURITY.md  THIRD_PARTY_LICENSES.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: doc-backend-analyzer.md  doc-deps-analyzer.md  doc-frontend-analyzer.md  doc-gap-detector.md  doc-writer.md
.claude/commands/: Build_Multiagent_Zileo.md  Build_zileo.md  Fix_Zileo.md  Optimize_Zileo.md  Plan_Zileo.md  Sync_Doc_Zileo.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  validate.yml
docs/: AGENT_TOOLS_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE_DECISIONS.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  DOCUMENTATION_AUDIT.md  FRONTEND_SPECIFICATIONS.md  GETTING_STARTED.md  LLM_INTEGRATION_RECOMMENDATIONS.md  MCP_ARCHITECTURE_DECISION.md  MCP_CONFIGURATION_GUIDE.md  MULTI_AGENT_ARCHITECTURE.md  MULTI_PROVIDER_SPECIFICATIONS.md  README.md  REMAINING_TASKS.md  SPECS_REMAINING.md  SUB_AGENT_GUIDE.md  TECH_STACK.md  TESTING_STRATEGY.md  TOOLS_REFACTORING_COMPLETE.md  TOOLS_REFERENCE.md  WORKFLOW_ORCHESTRATION.md
docs/corrections/: 2025-12-02_fix-todo-tab-streaming.md
docs/specs/: 2025-01-23_spec-base-implementation.md  2025-11-25_consolidated-project-status.md  2025-11-25_placeholder-inventory.md  2025-11-25_spec-complete-implementation-plan.md  2025-11-25_spec-mcp-integration.md  2025-11-25_spec-placeholders-removal-and-features-inventory.md  2025-11-25_spec-provider-models-crud-refactoring.md  2025-11-25_spec-todo-tool.md  2025-11-26_spec-functional-agent-system.md  2025-11-26_spec-internal-report-tool.md  2025-11-26_spec-memory-tool.md  2025-11-27_agent-system-analysis.md  2025-11-27_remaining-implementation-points.md  2025-11-27_spec-sub-agent-system-implementation.md  2025-11-27_spec-workflow-persistence-streaming.md  2025-11-29_spec-right-sidebar-activity-feed.md  2025-11-30_spec-prompt-library.md  2025-11-30_spec-token-display-complet.md  2025-11-30_spec-validation-settings.md  2025-12-01_spec-todo-tab-activity.md  2025-12-02_spec-import-export-settings.md  2025-12-02_spec-memory-tool-completion.md  2025-12-03_spec-agent-page-refactoring.md  2025-12-03_spec-json-function-calling-refactoring.md  2025-12-03_spec-tools-comprehensive-refactoring.md  2025-12-04_spec-calculator-tool.md  2025-12-04_spec-i18n-infrastructure.md  2025-12-04_spec-onboarding.md  2025-12-06_optimization-backend.md  2025-12-06_optimization-db.md  2025-12-06_optimization-mcp.md  2025-12-06_optimization-order.md  2025-12-06_optimization-security.md  2025-12-06_optimization-stores.md  2025-12-06_optimization-types.md  2025-12-06_spec-user-question-tool.md  2025-12-07_optimization-frontend-settings.md  2025-12-08_optimization-llm.md  2025-12-09_optimization-sub-agent-tools.md  2025-12-09_optimization-tools-memorytool.md  (+16 more)
docs/taches/: 2025-01-24_base-implementation.md  2025-01-24_feature1-llm-integration.md  2025-01-24_phase1-corrections.md  2025-01-24_phase2-types-synchronises.md  2025-01-24_phase3-multi-agent-infrastructure.md  2025-01-24_phase4-tauri-commands-core.md  2025-01-24_phase5-ui-basique.md  2025-01-24_phase6-logging-monitoring.md  (+83 more)
scripts/: setup-windows.ps1
src/: app.d.ts
src-tauri/: Cargo.toml  package-lock.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agents/: llm_agent.rs  mod.rs  simple_agent.rs
src-tauri/src/agents/core/: agent.rs  mod.rs  orchestrator.rs  registry.rs
src-tauri/src/commands/: agent.rs  custom_provider.rs  embedding.rs  import_export.rs  llm.rs  mcp.rs  memory.rs  message.rs  migration.rs  mod.rs  models.rs  prompt.rs  security.rs  streaming.rs  sub_agent_execution.rs  task.rs  thinking.rs  tool_execution.rs  user_question.rs  validation.rs  workflow.rs
src-tauri/src/db/: client.rs  mod.rs  queries.rs  schema.rs  utils.rs
src-tauri/src/llm/: circuit_breaker.rs  embedding.rs  manager.rs  mistral.rs  mod.rs  ollama.rs  openai_compatible.rs  pricing.rs  provider.rs  rate_limiter.rs  retry.rs  tool_adapter.rs  utils.rs
src-tauri/src/llm/adapters/: mistral_adapter.rs  mod.rs  ollama_adapter.rs  openai_adapter.rs  tests.rs
src-tauri/src/mcp/: circuit_breaker.rs  client.rs  error.rs  helpers.rs  http_handle.rs  manager.rs  mod.rs  protocol.rs  server_handle.rs
src-tauri/src/models/: agent.rs  custom_provider.rs  embedding.rs  function_calling.rs  import_export.rs  llm_models.rs  mcp.rs  memory.rs  message.rs  mod.rs  prompt.rs  serde_utils.rs  streaming.rs  sub_agent.rs  task.rs  thinking_step.rs  tool_execution.rs  user_question.rs  validation.rs  workflow.rs
src-tauri/src/security/: keystore.rs  mod.rs  validation.rs
src-tauri/src/tools/: constants.rs  context.rs  delegate_task.rs  factory.rs  mod.rs  parallel_tasks.rs  registry.rs  response.rs  spawn_agent.rs  sub_agent_circuit_breaker.rs  sub_agent_executor.rs  utils.rs  validation_helper.rs
src-tauri/src/tools/calculator/: mod.rs  tool.rs
src-tauri/src/tools/db/: analytics.rs  mod.rs  query_builder.rs  surrealdb_tool.rs
src-tauri/src/tools/memory/: helpers.rs  mod.rs  tool.rs
src-tauri/src/tools/todo/: mod.rs  tool.rs
src-tauri/src/tools/user_question/: circuit_breaker.rs  mod.rs  tests.rs  tool.rs
src-tauri/tests/: memory_tool_integration.rs  sub_agent_tools_integration.rs
tests/: agent-page.spec.ts  navigation.spec.ts  settings-page.spec.ts
(+214 files in other folders)
