[package]
name = "zileo-chat"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
surrealdb = { version = "2.4.0", features = ["kv-rocksdb", "protocol-http"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
regex = "1.10"
lazy_static = "1.5"

# Async utilities for cancellation tokens
tokio-util = { version = "0.7", features = ["rt"] }

# LLM Integration (Rig.rs)
rig-core = { version = "0.24.0", features = ["all"] }

# HTTP client for provider connectivity tests and MCP HTTP transport
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Async stream utilities for SSE
futures-util = "0.3"

# Tauri Secure Storage
keyring = "2.0"
aes-gcm = "0.10"

[dev-dependencies]
tempfile = "3.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Production build optimizations (OPT-DB-4)
[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
