[package]
name = "zileo-chat"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Assistance Micro Design <assistance-micro-design@pm.me>"]
description = "Zileo Chat - Multi-agent AI desktop application"
homepage = "https://www.assistancemicrodesign.net/"
repository = "https://github.com/assistance-micro-design/zileo-chat"
readme = "../README.md"
keywords = ["ai", "chat", "multi-agent", "llm", "tauri"]
categories = ["development-tools", "gui"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# OPT-WF-5: Verified >= 2.2.1 (CVE-2025-31477 patched, current: 2.5.2)
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# OPT-9: Use specific tokio features instead of "full" for faster compilation
tokio = { version = "1.49.0", features = [
    "rt",           # Runtime core
    "rt-multi-thread", # Multi-threaded runtime
    "macros",       # #[tokio::main], #[tokio::test]
    "sync",         # Synchronization primitives (Mutex, RwLock, channels)
    "time",         # Time utilities (sleep, timeout, interval)
    "fs",           # Async filesystem operations
    "io-util",      # Async I/O utilities
    "net",          # TCP/UDP networking
    "process",      # Async process spawning (for MCP stdio)
] }
surrealdb = { version = "2.5.0", features = ["kv-rocksdb", "protocol-http"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1"
# OPT-WF-4: Lock futures version (earlier versions yanked)
futures = "0.3.31"
regex = "1.10"
# OPT-8: Migrated from lazy_static to once_cell (better performance, maintained)
once_cell = "1.20"

# Async utilities for cancellation tokens
tokio-util = { version = "0.7", features = ["rt"] }

# LLM Integration (Rig.rs)
rig-core = { version = "0.30.0", features = ["all"] }

# HTTP client for provider connectivity tests and MCP HTTP transport
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Async stream utilities for SSE (OPT-WF-4: Lock version)
futures-util = "0.3.31"

# Tauri Secure Storage
# Platform-native credential stores (no default features - must be explicit)
keyring = { version = "3.6", features = [
    "apple-native",           # macOS/iOS Keychain
    "windows-native",         # Windows Credential Manager
    "sync-secret-service",    # Linux Secret Service (Gnome Keyring/KWallet)
] }
aes-gcm = "0.10"

[dev-dependencies]
tempfile = "3.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Production build optimizations (OPT-DB-4)
[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
